[package]
name = "blocks-hanging-out"
version = "0.2.0"
authors = ["Michał Sidor (Michcioperz) <public+git@meekchopp.es>"]
edition = "2018"

[profile.dev]
opt-level = 1

#[profile.release]
#opt-level = 3
#lto = true
#incremental = false
#codegen-units = 1

[dependencies]
ggez = { version = "0.6.0-rc0", default_features = false }
rand = { version = "0.8.2", default_features = false, features = ["small_rng"] }
better-panic = "0.2.0"
either = "1.6.1"
palette = { version = "0.5.0", default_features = false, features = ["libm"] }
pretty_env_logger = "0.4.0"
