[package]
name = "blocks-hanging-out"
version = "0.2.0"
authors = ["Michał Sidor (Michcioperz) <public+git@meekchopp.es>"]
edition = "2018"

[profile.dev]
opt-level = 1

#[profile.release]
#opt-level = 3
#lto = true
#incremental = false
#codegen-units = 1

[dependencies]
ggez = { version = "0.9", default_features = false }
rand = { version = "0.8", default_features = false, features = ["small_rng"] }
better-panic = "0.3"
either = "1.6"
palette = { version = "0.5", default_features = false, features = ["libm"] }
pretty_env_logger = "0.5"
